Render the user signUp details

--- a/views/users/private.handlebars
+++ b/views/users/private.handlebars
@@ -1,10 +1,10 @@
 <article class="post">
-  <h2>LoggedIn user details:</h2>
+  <h2>Created user details:</h2>
   <div class="success">
     <p>Username: {{user.username}}</p>
-    <p>firstName: {{user.firstName}}</p>
-    <p>lastName: {{user.lastName}}</p>
-    <p>Profession: {{user.Profession}}</p>
-    <p>Bio: {{user.Bio}}</p>
+    <p>sessionId: {{user.sessionId}}</p>
+    <p>hashedPassword: {{user.hashedPassword}}</p>
+    <p>name: {{user.name}}</p>
+    <p>_id: {{user._id}}</p>
   </div>
 </article>
