Address is fixed

--- a/views/detail/detail.handlebars
+++ b/views/detail/detail.handlebars
@@ -2,7 +2,7 @@
     <h1>{{business.name}}</h1>
     <img src="{{business.image_url}}" alt="Picture of Business" height="400" width="300">
     <p>{{business.phone}}</p>
-    {{!-- <p>{{business.location}}</p> --}}
+    <p>{{business.location.display_address}}</p>
     <p>{{business.rating}} Stars</p>
     <p>{{business.price}}</p>
     {{!-- <p>{{business.categories}}</p> --}}
