--- a/views/detail/detail.handlebars
+++ b/views/detail/detail.handlebars
@@ -1,10 +1,14 @@
 <section>
     <h1>{{business.name}}</h1>
     <img src="{{business.image_url}}" alt="Picture of Business" height="400" width="300">
-    <p>{{business.phone}}</p>
     <p>{{business.location.display_address}}</p>
+    <p>{{business.phone}}</p>  
     <p>{{business.rating}} Stars</p>
     <p>{{business.price}}</p>
+    {{!-- <p>{{business.categories.title}}</p> --}}
+    {{#each business.categories}}
+        <p>{{title}}</p>
+    {{/each}}
     {{!-- <p>{{business.categories}}</p> --}}
     {{!-- <p>{{business.transactions}}</p> --}}
     {{!-- <div class="reviews">
