--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="/public/css/main.css">
 </head>
 <body>
+    {{!-- <nav>
+        <input type="button" name="">
+    </nav> --}}
     <main>
         {{{body}}}
     </main>
