adding signup, login flows for users

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="/users/login">Login for existing users</a></li>
+        </ul>
+        <ul>
+            <li><a href="/users/signup">signup for new users</a></li>
+        </ul>
+    </nav>
     <main class="container">
         <div class="row">
             <div class="col-sm-12">
