--- a/views/users/reviewselector.handlebars
+++ b/views/users/reviewselector.handlebars
@@ -1,6 +1,6 @@
 <article class="new-post">
     <div class="header">
-        <h1>Please select a business first</h1>
+        <h1>Business listing</h1>
     </div>
     <form action="/users/reviewcreated" method="POST" class="new-post-form">
     <div class="col-sm-12 col-md-10" id="todo-area">
