--- a/views/users/private.handlebars
+++ b/views/users/private.handlebars
@@ -7,6 +7,11 @@
       <p>Username: {{user.username}}</p>
       <p>name: {{user.name}}</p>
     </div>
+    <div>
+       <h3>Existing reviews:</h3>
+       {{#each reviews}} {{> review_item }} {{/each}}
+    </div>
+
     <div class="col-sm-12 col-md-6">
       <button id="write_review_button" type="submit" value="Write a review" class="ybtn ybtn--primary ybtn--big">
        <span>Write a review</span></button>
