--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,7 +6,7 @@
                 <a href="/detail/{{_id}}">
                     <div>
                         <p>{{name}}</p>
-                        <img src="{{image_url}}" alt="Picture of Business" height="200" width="200">
+                        <img src="{{image_url}}" alt="Picture of Business" height="200" width="auto">
                     </div>
                 </a>
                 <p>{{location.display_address}}</p>
