--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,16 +4,15 @@
 <head>
     <meta charset="utf-8">
     <title>WebAppCoders</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="/public/css/main.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
-        crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="topnav-right">
-    <a href="/users/login">  Login  </a>
-    <a href="/users/signup">  Signup </a>
-  </div>
+    <nav class="topnav-right">
+        <a href="/users/login">  Login  </a>
+        <a href="/users/signup">  Signup </a>
+    </nav>
     <main class="container">
         <div class="row">
             <div class="col-sm-12">
