--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-  background: #dedede;
+  background: #e0e0e0;
   font-family: Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
@@ -144,6 +144,10 @@ form label {
 
 .businessborder {
   border: 2px solid;
+  border-bottom: double;
+  border-top: double;
+  /* width: 50%; */
+  background-color: #eeeeee;
 }
 
 .bizdiv {
@@ -178,3 +182,19 @@ form label {
   font-size: 14px;
 }
 
+a:hover {
+  text-decoration: none;
+  color: orangered;
+}
+
+.main-section {
+  text-align: center;
+}
+
+.business-wrapper {
+  display: inline-block;
+}
+
+.category-label {
+  font-weight: bold;
+}
