Minor details page style changes

--- a/views/detail/detail.handlebars
+++ b/views/detail/detail.handlebars
@@ -5,11 +5,11 @@
         <img src="{{business.image_url}}" alt="Picture of Business" height="300" width="auto" class="businessdetail bizimg">
         <p class="businessdetail bizaddress">{{business.location.display_address}}</p>
         <p class="businessdetail bizphone">{{business.phone}}</p>  
-        <p class="businessdetail bizcat">Categories:</p>
+        <p class="businessdetail bizcat category-label">Categories:</p>
         {{#each business.categories}}
-            <p class="businessdetail bizcategory ">| {{title}} |</p>
+            <p class="businessdetail bizcategory">{{title}};</p>
         {{/each}}
-        <p class="businessdetail bizrating"><br/>{{business.rating}} Star(s)</p>
+        <p class="businessdetail bizrating"><br/>{{business.rating}} ★ </p>
         <p class="businessdetail bizprice"> | Price: {{business.price}}</p>
     </div>
     <div class="reviews">
