--- a/views/detail/detail.handlebars
+++ b/views/detail/detail.handlebars
@@ -7,7 +7,7 @@
         <p class="businessdetail bizphone">{{business.phone}}</p>  
         <p class="businessdetail bizcat category-label">Categories:</p>
         {{#each business.categories}}
-            <p class="businessdetail bizcategory">{{title}};</p>
+            <p class="businessdetail bizcategory">| {{title}} |&nbsp;&nbsp;</p>
         {{/each}}
         <p class="businessdetail bizrating"><br/>{{business.rating}} ★ </p>
         <p class="businessdetail bizprice"> | Price: {{business.price}}</p>
