--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,9 +9,14 @@
 </head>
 
 <body>
-    <nav class="topnav-right">
-        <a href="/users/login">  Login  </a>
-        <a href="/users/signup">  Signup </a>
+    <nav class="navbar">
+        <div class="topnav-left">
+            <!-- Place search bar here -->
+        </div>
+        <div class="topnav-right">
+            <a href="/users/login"><button type="button">  Login  </button></a>
+            <a href="/users/signup"><button type="button">  Signup  </button></a>
+        </div>
     </nav>
     <main class="container">
         <div class="row">
