--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <section class="main-section">
-    <h2>Recomended Businesses:</h2>
+    <h2>Recomended Businesses</h2>
     <article class="business-wrapper">
         {{#each business}}
             <div class="businessborder position">
