--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,5 @@
 <section class="main-section">
+    <h3><a href="/users/createBuisness"> Click here to add a new buisness!</a></h3>
     <h2>Recomended Businesses:</h2>
     <article class="business-wrapper">
         {{#each business}}
