added dynamic business rating update

--- a/views/users/reviewselector.handlebars
+++ b/views/users/reviewselector.handlebars
@@ -10,6 +10,7 @@
         <label>Business id: <input id="businessid" name="businessid" type="text" value=""></label>
         <label>Business Name:<input id="businessname" name="businessname" type="text" value=""></label>
         <label>Review description:<input id="newtask_description" name="newtask_description" type="text" value=""></label>
+        <label>Rating:<input id="newtask_rating" name="newtask_rating" type="number" value=""></label>
         <button id="signup-button" type="submit" value="Sign Up" class="ybtn ybtn--primary ybtn--big disable-on-submit submit signup-button">
         <span>Submit</span></button>
     </div>
