--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
         crossorigin="anonymous"></script>
         <script src="/public/js/search.js"></script>
     <script src="/public/js/basic_jquery.js"></script>
-    
+    </main>
 </body>
 </html>
 
