adjusted createBusiness routes

--- a/views/users/createBusiness.handlebars
+++ b/views/users/createBusiness.handlebars
@@ -3,7 +3,7 @@
     <h2>Fill out this form to create a buisness</h2>
     <p class="subheading">Make your buisness public on our website!</p>
   </div>
-  <form action="/users/createBuisness" method="POST" class="new-post-form">
+  <form action="/users/createBusiness" method="POST" class="new-post-form">
     <input type="hidden" name="csrftok">
     <div class="js-password-meter-container" data-component-bound="true">
       <input id="name" name="name" placeholder="Buisness Name" required="required" type="text" value="">
