show favorite business for logged in user

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,8 @@
 <body>
     <nav class="navbar">
         <div class="topnav-left">
-            <input type="text" id="input" onkeyup="searchFun()" placeholder="Search for Business Names..">
+            <a href="/"> Home </a>
+            <input type="text" id="input" onkeyup="searchFun()" placeholder="Search for Business..">
             <ul id="businesses">
             </ul>
         </div>
