--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -6,7 +6,7 @@
   <form action="/users/login" method="POST" class="new-post-form">
     <input type="hidden" name="csrftok">
     <div class="js-password-meter-container" data-component-bound="true">
-      <input id="username" name="username" placeholder="login id" required="required" type="text" value="">
+      <input id="username" name="username" placeholder="Username" required="required" type="text" value="">
       <input id="password" name="password" placeholder="Password" required="required" type="text" value="">
       <div class="js-password-meter-wrapper password-meter-wrapper u-hidden">
 
