--- a/views/users/reviewselector.handlebars
+++ b/views/users/reviewselector.handlebars
@@ -7,10 +7,12 @@
         {{#each business}} {{> business_item }} {{/each}}
     </div>
     <div id="review-details">
-        <label>Business id: <input id="businessid" name="businessid" type="text" value=""></label>
+        <label hidden>Business id: <input id="businessid" name="businessid" type="text" value="" hidden></label>
         <label>Business Name:<input id="businessname" name="businessname" type="text" value=""></label>
         <label>Review description:<input id="newtask_description" name="newtask_description" type="text" value=""></label>
         <label>Rating:<input id="newtask_rating" name="newtask_rating" type="number" value=""></label>
+        <input id="price" name="price" placeholder="Price $,$$,$$$" required="required" type="text" value="">
+        <input id="imageURL" name="image_url" placeholder="Image URL" required="required" type="text" value="">
         <button id="signup-button" type="submit" value="Sign Up" class="ybtn ybtn--primary ybtn--big disable-on-submit submit signup-button">
         <span>Submit</span></button>
     </div>
