styling for loggedin page

--- a/views/partials/review_item.handlebars
+++ b/views/partials/review_item.handlebars
@@ -3,8 +3,8 @@
     <div class="col-sm-12">
         <h3>{{ title }}</h3>
         <p>{{ text }}</p>
-        <img src="{{image_url}}" alt="Picture of Business" height="200" width="200">
-        <p>{{ rating }}</p>
+        {{!-- <img src="{{image_url}}" alt="Picture of Business" height="200" width="200"> --}}
+        <p>Rating:{{ rating }} stars</p>
     </div>
 </div>
 </article>
