--- a/views/detail/detail.handlebars
+++ b/views/detail/detail.handlebars
@@ -17,8 +17,7 @@
         <p class="businessdetail bizprice"> | Price: {{business.price}}</p>
     </div>
     <div class="revdiv">
-        <h2 class="rev revheader revb">Reviews</h2>
-        <a href="/"><button type="button" class="revb revbutton">Post a Review</button></a>
+        <h2 class="rev revheader">Reviews</h2>
         <p class="revreview">{{business.review_count}} Review(s)</p>
         {{#each reviews}}
         <article class="revarticle">
