--- a/views/users/login.handlebars
+++ b/views/users/login.handlebars
@@ -7,7 +7,7 @@
     <input type="hidden" name="csrftok">
     <div class="js-password-meter-container" data-component-bound="true">
       <input id="username" name="username" placeholder="Username" required="required" type="text" value="">
-      <input id="password" name="password" placeholder="Password" required="required" type="text" value="">
+      <input id="password" name="password" placeholder="Password" required="required" type="password" value="">
       <div class="js-password-meter-wrapper password-meter-wrapper u-hidden">
 
         <div class="progress-bar-container--minimal">
