Add business fav if rating is greater than 4

--- a/views/users/private.handlebars
+++ b/views/users/private.handlebars
@@ -13,7 +13,7 @@
     </div>
     <div>
        <h3>Favorite business:</h3>
-       {{#each favbusiness}} {{> business_item }} {{/each}}
+       {{#each businesses}} {{> business_fav }} {{/each}}
     </div>
 
     <div class="col-sm-12 col-md-6">
